# noetfeld-os

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  AGENT_LOOP_ACTIVATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  NORTH_STAR.md  OFFERINGS.md  OFFERINGS_LOCKED.md  PLATFORM_BLUEPRINT.md  POSITIONING.md  POSITIONING_EXTENDED.md  PRODUCT_BRIEF.md  PRODUCT_TRUTH.md  PROJECTS.md  PROJECT_BOUNDARIES_LOCKED.md  README.md  ROUTING_CARD.md  STRATEGIC_LOCK.md  _redirects  api_keys.example.json  auth.py  config.py  database.py  decision_engine.py  exceptions.py  fix_motor_secret.sh  health.py  index.html  openapi.json  package-lock.json  package.json  policy_loader.py  (+13 more)
.agent-private/: README.md
.cursor/: AGENT_TRACKING.md  README.md  hooks.json  ports.json
.github/: CODEOWNERS  ENVIRONMENT_PRODUCTION_PREP_v1.md  copilot-instructions.md  dependabot.yml
.noetfield/: agent_manifest.yml
.sina-agent/: README.md
Ex/: Index.html  index.html
L0-law/: CURRENT.md  PUBLIC_WWW_BRAND_E2E_LAW_LOCKED_v1.md
L2-knowledge/: README.md
Noetfield-All-Documents/: MANIFEST.md  README.md
about/: index.html
accessibility/: index.html
ai-automation/: index.html
ai-factories/: index.html
ai-value-governance-os/: index.html
api/: health.js  intake.js
app/: index.html
assets/: nf-chat-greeting-ssot.js  noetfield-admin-traction.js  noetfield-chat.css  noetfield-chat.js  noetfield-components.css  noetfield-console.css  noetfield-ecosystem.json  noetfield-enterprise.css  noetfield-forms.js  noetfield-institutional.css  noetfield-intake-api.js  noetfield-intake-core.js  noetfield-intake-ecosystem-mode.js  noetfield-intake-email.js  noetfield-intake-pilot-mode.js  noetfield-intake-status.js  noetfield-intake.css  noetfield-live-proof.js  noetfield-ops.css  noetfield-partner-apply.js  noetfield-pilot-intake.js  noetfield-print.css  noetfield-sales.css  noetfield-sandbox.js  noetfield-shell.css  noetfield-shell.js  noetfield-ssot-demo.css  noetfield-ssot-demo.js  noetfield-tokens.css  noetfield-v14-light.css  noetfield-v15-ref.css  noetfield-v16-packaging.css  noetfield-v18-live-proof.css  noetfield-v18-motion.css  noetfield-v18-trial-os.css  noetfield-v20-tier1.css  noetfield-v21-fullwidth.css  noetfield-work-with-us.js  noetfield-www.css
audit/: audit_store.py
auth/: index.html
bank-pilot/: index.html
banner/: index.html
config/: aider-broker-v1.yml  model-router.yml  noos-local.env.fill-me
console/: index.html
contact/: index.html
cookies/: index.html
copilot/: index.html
data/: COMPUTE_ROI_ALLOCATION_POINTER.md  autorun-sandboxes-v1.json  autorun-workflows-v1.json  cost_policy_machine.json  founder-trigger-ledger-v1.json  mission-registry-v1.json  nf-agent-report-language-standard-v1.json  nf-daily-heartbeat-format-v1.json  nf-founder-reply-glossary-v1.json  nf-platform-deploy-pin-v1.json  nf-pr-conflict-resolver-v1.json  nf-www-gov-proxy-v1.json  nf_anti_staleness_max_v1.json  nf_cleanup_dimensions_v1.json  nf_mono_nerve_wiring_v1.json  nf_orient_routing_v1.json  noetfield-runway-contract-v1.json  noos-24-7-loops-v1.json  noos-acg-outbound-queue-v1.json  noos-audit-findings-v1.json  noos-autonomy-kernel-v1.json  noos-canonical-roles-v1.json  noos-cf-dispatch-table-v1.json  noos-cloud-worker-inbox-v1.json  noos-copilot-dispatcher-mode-v1.json  noos-deadman-config-v1.json  noos-deploy-scopes-v1.json  noos-executor-cutover-status-v1.json  noos-external-monitors-v1.json  noos-gha-secondary-witness-manifest-v1.json  noos-healing-handoff-v1.json  noos-health-incident-routing-v1.json  noos-integrator-control-plan-v1.json  noos-integrator-role-v1.json  noos-kaizen-recipes-v1.json  noos-living-system-baseline-v1.json  noos-machine-loops-config-v1.json  noos-motor-executor-wiring-v1.json  noos-motor-restart-recipes-v1.json  noos-next-plan-unified-v1.json  (+22 more)
directory/: index.html
docs/: BANK_GRADE_CHECKLIST.md  BANK_PILOT_DEMO.md  CANONICAL_WWW.md  CHATBOT_SETUP.md  COMMERCIAL_CLIENT_VC_READINESS_LOCKED_v1.md  DESIGN_REFERENCE_GOALS_LOCKED_v1.md  DESIGN_SYSTEM.md  DEVELOPER_BOOTSTRAP.md  DOC_UNIFIED_INDEX_LOCKED_v1.md  FINAL_PUBLIC_SITE.md  GOVERNANCE_PILOT_RUNBOOK.md  GOVERNED_AUTORUN_LAWS_v2.md  GOVERNED_AUTORUN_LAWS_v3.md  GO_LIVE.md  GO_LIVE_CHECKLIST.md  INTAKE_OPS.md  (+40 more)
(+5323 files in other folders)
