[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noetfield-gate"
version = "0.1.0"
description = "Chain tool: pre-execution gate (PASS/BLOCK) and policy decision receipts for Noetfield OS"
readme = "packages/noetfield-gate/README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Noetfield Systems Inc." }]
keywords = ["governance", "agents", "policy", "noetfield", "gel"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://www.noetfield.com/gel/"
Documentation = "https://www.noetfield.com/gel/"
Repository = "https://github.com/kazemnezhadsina144-dot/noetfeld-os"
Issues = "https://github.com/kazemnezhadsina144-dot/noetfeld-os/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28", "build>=1.2", "twine>=5.0"]

[project.scripts]
noetfield = "noetfield_gate.cli:main"

[tool.setuptools.packages.find]
include = ["noetfield_gate*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
noetfield_gate = ["policies/*.json"]
